MPS-34955 Standalone application: generate '--add-opens' options in the application startup scripts
compiler.xml update